--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Messenger</string>
-    <string name="enter_your_nickname">Enter your nickName</string>
+    <string name="enter_your_nickname">Enter your nickname</string>
     <string name="enter_your_password">Enter your password</string>
     <string name="enter_your_profession">Enter your profession</string>
     <string name="sign_in">sign in</string>
