create profile page v1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="sign_in">sign in</string>
     <string name="not_registered_ask">Not Registered?</string>
     <string name="sign_up">sign up</string>
+    <string name="your_profession">your profession</string>
+    <string name="your_nickname">your nickname</string>
+    <string name="sign_out">sign out</string>
+    <string name="update">Update</string>
 </resources>
