--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="sign_out">Sign out</string>
     <string name="update">Update</string>
     <string name="userName_exists">User with this userName already exists</string>
-    <string name="wrong_userName_password">Wrong userName or password</string>
+    <string name="userName_nonExistant">Username doesnt exist</string>
+    <string name="wrong_password">Wrong password</string>
     <string name="Unknown_error">An unknown error occured</string>
 </resources>
